# binancesdk

./: .gitignore  CMakeLists.txt  Makefile  conanfile.py  conaninfo.txt
.devcontainer/: Dockerfile  devcontainer.json
src/: binance_client.cpp  binance_client.h  binance_common.h  binance_http.h  binance_traits.h  binance_types.cpp  binance_types.h  boost_session.h  root_certificates.h
test_package/: CMakeLists.txt  conanfile.py
test_package/src/: client.cpp  http.cpp
